--- a/src/world/CMakeLists.txt
+++ b/src/world/CMakeLists.txt
@@ -11,4 +11,7 @@ add_library(${WORLD_LIB} STATIC ${SOURCES})
 target_link_libraries(${WORLD_LIB} PUBLIC ${WORLD_OBJ})
 
 include(Format)
+include(CppCheck)
+
 Format(${WORLD_LIB} .)
+AddCppCheck(${WORLD_LIB})
